fix navBar jumping to top

--- a/src/Components/App/styles.module.css
+++ b/src/Components/App/styles.module.css
@@ -25,7 +25,6 @@
 
 .navBarContainer {
     border-bottom: 1px solid white;
-    min-height: 100px;
     display: flex;
 }
 
